# Confusion-Mapper

./: .gitignore  CHANGELOG.md  CITATION.cff  CITATION.cff.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  confusion_mapper.py  paper-joss.md  paper.bib  paper.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
JOSS_submission/: CITATION.cff  MANUAL_FIXES_REQUIRED.md  paper.bib  requirements.txt
JOSS_submission/tests/: test_kappa.py
case_study/: README.md  run_case_study.py
case_study/results/: REPORT.md  bootstrap_kappas.csv  confusion_matrix.csv  per_type_stats.csv  summary.json
docs/: methodology.md  methods.md  research-context.md  research-context.md.txt  taxonomy.md
examples/: demo.py
sample_data/: custom_taxonomy.json  example_labels.csv  example_session.json.txt
submission/: SUBMISSION_GUIDE.md  cover_letter.md  fee_waiver_email.md
tests/: test_kappa.py
